new samples notebooks added and existing samples updated (format, typos)

--- a/Streams-DatabaseSample.ipynb
+++ b/Streams-DatabaseSample.ipynb
@@ -5,25 +5,18 @@
    "metadata": {},
    "source": [
     "# IBM Streams database sample application\n",
-    "\n",
-    "This sample demonstrates creating a Streams Python application to connect to a DB2 Warehouse database, perform some SQL queries, and viewing the results.\n",
+    "This sample demonstrates creating a Streams Python application to connect to a Db2 database, performing some analytics, and viewing the results.\n",
     "\n",
     "In this notebook, you'll see examples of how to:\n",
-    " 1. [Setup your data connections](#setup)\n",
-    " 2. [Create the application](#create)\n",
-    "     - [Drop and create the table](#drop)\n",
-    "     - [Insert streaming data](#insert)\n",
-    "     - [Retrieve data from the table](#select)\n",
-    " 3. [Submit the application](#launch)\n",
-    " 4. [View the results](#view)\n",
-    " 5. [Job status](#status)\n",
-    " 6. [Stop the application](#cancel)\n",
-    "\n",
+    "1. [Setup your database connection](#setup)\n",
+    "2. [Create the application](#create)\n",
+    "3. [Submit the application](#submit)\n",
+    "4. [Connect to the running application to view data](#view)\n",
     "\n",
     "# Overview\n",
     "**About the sample**\n",
     "\n",
-    "This application demonstrates how to drop a table, create a table, insert rows into a table and to get (SELECT) rows from a Db2 Warehouse database.\n",
+    "This application simulates data tuples that are inserted as rows into a Db2 database table.\n",
     "\n",
     "**How it works**\n",
     "   \n",
@@ -58,9 +51,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 Install or upgrade `streamsx.database` package\n",
+    "### 1.2 Optional: Upgrade the `streamsx.database` Python package\n",
     "\n",
-    "Run the cell below to upgrade to the latest version of the `streamsx.database` package or to install the package."
+    "Uncomment and run the cell below if you want to upgrade to the latest version of the streamsx.database package.\n"
    ]
   },
   {
@@ -69,11 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "!{sys.executable} -m pip install --user --upgrade streamsx.database\n",
-    "\n",
-    "# When you need to install a specific version of the package, run this line instead:\n",
-    "#!pip install --user streamsx.database==somever"
+    "#import sys\n",
+    "#!{sys.executable} -m pip install --user --upgrade streamsx.database"
    ]
   },
   {
@@ -85,29 +75,29 @@
     "import streamsx.database as db\n",
     "import streamsx.topology.context\n",
     "print(\"INFO: streamsx package version: \" + streamsx.topology.context.__version__)\n",
-    "print(\"INFO: streamsx.database package version: \" + db.__version__)\n"
+    "print(\"INFO: streamsx.database package version: \" + db.__version__)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3 Configure the connection to Db2 Warehouse\n",
+    "### <a name=\"credentials\"> </a> 1.3 Configure the connection to Db2 Warehouse\n",
     "\n",
     "We need a Db2 credentials as JSON string to connect to a Db2 database.\n",
     "This JSON string contains the database credentials `username`, `password` and `jdbcurl`.\n",
     "\n",
     "To create a Db2 credentials, please perform the following steps:\n",
     "\n",
-    "- 1 Create a Db2 Warehouse service on IBM cloud.\n",
+    "1. Create a Db2 Warehouse service on IBM cloud.\n",
     "\n",
     "  you need to have an IBM account to create a Db2 service.\n",
     "\n",
     "  https://console.bluemix.net/catalog/?search=db2\n",
     "\n",
-    "- 2 Create a service credential for Db2 service on IBM cloud.\n",
-    "- 3 Copy the credentials in clipboard.\n",
-    "- 4 Paste the credentials into Db2 Warehouse credentials prompt below.\n",
+    "2. Create a service credential for Db2 service on IBM cloud.\n",
+    "3. Copy the credentials in clipboard.\n",
+    "4. Paste the credentials into Db2 Warehouse credentials prompt below.\n",
     "\n",
     "If you want to use another Db2 database, you can create a JSON string with the following attributes:\n",
     "\n",
@@ -129,10 +119,62 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "# store the database credentials in db2credentials\n",
+    "db2credentials = json.loads(db2_service_credentials)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a name=\"create\"> </a> 2. Create the application\n",
+    "### 1.3.1 Alternative: Use a configured external connection\n",
+    "\n",
+    "Perform the steps [Connecting to data source](https://docs-icpdata.mybluemix.net/docs/content/SSQNUZ_current/com.ibm.icpdata.doc/igc/t_connect_data_sources.html) \n",
+    "and create a external configuration for your Db2 connection.\n",
+    "\n",
+    "List the connections with the cell below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ext_connections = icpd_util.get_connections('external')\n",
+    "print (ext_connections)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Change the connection_name, uncomment and run the cell below "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#connection_name = 'Db2-Ext'\n",
+    "#db2credentials = icpd_util.get_connection(connection_name, conn_class='external')\n",
+    "#print (db2credentials)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <a name=\"create\"> </a> 2. Create the application\n",
     "All Streams applications start with a Topology object, so start by creating one:\n"
    ]
   },
@@ -147,13 +189,10 @@
     "from streamsx.topology.context import *\n",
     "from streamsx.topology.schema import StreamSchema\n",
     "import streamsx.database as db\n",
-    "import json\n",
     "\n",
-    "# store the databse credentials in db2credentials\n",
-    "db2credentials = json.loads(db2_service_credentials)\n",
     "\n",
     "# create a Topology object\n",
-    "topo = Topology(name=\"database\")\n"
+    "topo = Topology(name=\"DatabaseSample\")"
    ]
   },
   {
@@ -162,13 +201,24 @@
    "source": [
     "\n",
     "### How to use the streamsx.database package\n",
-    "To interact with the database from Streams, you pass a SQL statement to the `streamsx.database.run_statement` function.\n",
+    "The streamsx.database package is the python wrapper for the [streamsx.jdbc](https://ibmstreams.github.io/streamsx.jdbc/doc/spldoc/html) toolkit\n",
     "\n",
-    "For example, this application executes SQL statements that: \n",
-    "- drop the Db2 table, if exists.\n",
-    "- create a new table in a Db2 database.\n",
-    "- insert some rows into the table.\n",
-    "- select all rows from a table.\n"
+    "To interact with a Db2 database from Streams, you pass a SQL statement to the `streamsx.database.run_statement` function.\n",
+    "\n",
+    "`run_statement` is the main function of `streamsx.database` package.\n",
+    "\n",
+    "It executes a SQL statement and produces a [`Stream`](https://streamsxtopology.readthedocs.io/en/stable/streamsx.topology.topology.html#stream) of the results.\n",
+    "It needs at least two mandatory parameters, the first one is the input `Stream` and the second parameter is the database credentials in JSON format.\n",
+    "\n",
+    "There are 2 ways to execute SQL statements using `db.run_statement`:\n",
+    "- Set the `stream` parameter to a `Stream` containing the statements to execute. This is used for statements like creating or dropping tables.\n",
+    "- Set the `sql` parameter to the SQL statement and the `stream` parameter to the data you want to send to Db2. Use this when inserting data.\n",
+    "\n",
+    "This application will show both ways. It executes SQL statements that: \n",
+    "- Drop the Db2 table, if exists.\n",
+    "- Create a new table in a Db2 database.\n",
+    "- Insert some rows into the table.\n",
+    "- Select all rows from a table."
    ]
   },
   {
@@ -198,13 +248,9 @@
    "metadata": {},
    "source": [
     "## <a name=\"drop\"> </a> 2.1. Create the table\n",
-    "`run_statement` is the main function of `streamsx.database` package.\n",
     "\n",
-    "The streamsx.database package is the python wrapper for [streamsx.jdbc](https://ibmstreams.github.io/streamsx.jdbc/doc/spldoc/html) toolkit.\n",
     "\n",
-    "It needs at least two mandatory parameters, the first one is a stream as input and the second parameter is the database credentials in JSON format.\n",
-    "\n",
-    "In the following step the `topo.source` creates a Stream containing the two SQL statements to drop and create the table. \n",
+    "In the following step the `topo.source` creates a `Stream` containing the two SQL statements to drop and create the table. \n",
     "\n",
     "`db.run_statement` executes the two statements in the input stream, so it will drop the table and create a new table.\n"
    ]
@@ -218,8 +264,7 @@
     "# The streamToCreateTable is a Stream containing the two SQL statements: sql_drop and sql_create\n",
     "streamToCreateTable = topo.source([sql_drop, sql_create]).as_string()\n",
     "# drop the table if exist and create a new table in database\n",
-    "createTableResults = db.run_statement(name=\"CREATE_TABLE\", stream=streamToCreateTable, credentials=db2credentials)\n",
-    "createTableResults.print()\n"
+    "db.run_statement(stream=streamToCreateTable, credentials=db2credentials, name=\"CREATE_TABLE\",)\n"
    ]
   },
   {
@@ -228,28 +273,16 @@
    "source": [
     "## <a name=\"insert\"> </a> 2.2. Insert streaming data into the table\n",
     "\n",
-    "Generate a stream of data and insert it into the table we created.\n",
+    "Next, we generate a stream of data and insert it into the table we created.\n",
     "\n",
-    "The `run_statement` is based on [streamsx.jdbc](https://ibmstreams.github.io/streamsx.jdbc/doc/spldoc/html) toolkit.\n",
+    "The function `generate_data()` generates some data with schema `(ID INTEGER, NAME STRING, AGE INTEGER)` that will be inserted into the database..\n",
     "\n",
-    "The function `generate_data()` generates some data with schema (ID INTEGER, NAME STRING, AGE INTEGER).\n",
-    "\n",
-    "Before it can be inserted in the database, we have to convert output of generate_data() to the StreamsSchema type, which is the format accepted by the run_statement function.\n",
-    "\n",
-    "Here is a list of data type in IBM streams: [IBM Streams Data types](https://www.ibm.com/support/knowledgecenter/en/SSCRJU_4.3.0/com.ibm.streams.ref.doc/doc/primitivetypes.html)\n",
+    "Before it can be inserted in the database, we have to change the [schema](https://streamsxtopology.readthedocs.io/en/stable/streamsx.topology.schema.html) of the input data `Stream` to the [StreamsSchema](https://streamsxtopology.readthedocs.io/en/stable/streamsx.topology.schema.html#streamsx.topology.schema.StreamSchema) type, which is the format accepted by the `run_statement` function.  See the [list of mappings from Python types to StreamSchema types](https://streamsxtopology.readthedocs.io/en/stable/streamsx.topology.schema.html#streamsx.topology.schema.StreamSchema)\n",
     "\n",
     "\n",
-    "The `genData` is also a topology source stream. It gets the data from `generate_data()` and produces a stream of three attributes as input for INSERT. \n",
+    "The `genData` `Stream` contains the data produced by the `generate_data()` function.\n",
     "\n",
-    "The `sql` parameter is an optional parameter in the `run_statement`.\n",
-    "\n",
-    "There are to ways to put sql statements into run_statement .\n",
-    "\n",
-    "1- Direct over the input stream. (CREATE_TABLE)\n",
-    "\n",
-    "2- Set the sql value of `sql` parameter in the operator. (INSERT)\n",
-    "\n",
-    "The `run_statement` uses in the first step `streamToCreateTable` as input stream, but in the following step, it uses `genData` as input stream.\n"
+    "We again use `db.run_statement` but in the following step, it uses `genData` as input stream and the predefined `sql_insert` variable as the SQL statement.\n"
    ]
   },
   {
@@ -263,23 +296,22 @@
     "\n",
     "# generates some data with schema (ID, NAME, AGE)\n",
     "def generate_data():\n",
-    "    for counter in range(0, 5000):\n",
+    "    counter = 0\n",
+    "    while True:\n",
     "        #yield a random id, name and age\n",
+    "        counter = counter +1 \n",
     "        yield  {\"NAME\": \"Name_\" + str(random.randint(0,500)), \"ID\": counter, \"AGE\": random.randint(10,99)}\n",
     "        time.sleep(0.10)\n",
     "\n",
     "# convert it to SPL schema for the database operator run_statement\n",
-    "tuple_schema = StreamSchema(\"tuple<int32 ID, rstring NAME, int32 AGE>\")\n",
+    "tuple_schema = StreamSchema(\"tuple<int64 ID, rstring NAME, int32 AGE>\")\n",
     "# Generates data for a stream of three attributes. Each attribute maps to a column using the same name of the Db2 database table.\n",
-    "genData = topo.source(generate_data, name=\"GeneratedData\").map(lambda tpl: (tpl[\"ID\"], tpl[\"NAME\"], tpl[\"AGE\"]), schema=tuple_schema)\n",
+    "genData = topo.source(generate_data, name=\"GeneratedData\").map(lambda tpl: (tpl[\"ID\"], tpl[\"NAME\"], tpl[\"AGE\"]),\n",
+    "                    schema=tuple_schema)\n",
     "\n",
-    "genData.print()\n",
     "\n",
     "# insert generated rows into table\n",
-    "# It uses the statement (sql) and statementParamAttrs (sql_params) of streamsx.jdbc toolkit \n",
-    "insertResults= db.run_statement(name=\"INSERT\", stream=genData, sql=sql_insert, sql_params=\"ID, NAME, AGE\" ,credentials = db2credentials)\n",
-    "insertResults.print()\n",
-    "\n"
+    "insertResults= db.run_statement(name=\"INSERT\", stream=genData, sql=sql_insert, sql_params=\"ID, NAME, AGE\" ,credentials = db2credentials)"
    ]
   },
   {
@@ -287,7 +319,7 @@
    "metadata": {},
    "source": [
     "## <a name=\"select\"> </a> 2.3. Retrieve data from the table\n",
-    "In this step the `run_statement` runs the SQL statement `\"SELECT * FROM RUN_SAMPLE_DEMO\"` and returns the results in tuple schema `tuple<int32 ID, rstring NAME, int32 AGE>` .\n"
+    "In this step the `run_statement` runs the SQL statement `\"SELECT * FROM RUN_SAMPLE_DEMO\"` and returns the results in tuple schema `tuple<int64 ID, rstring NAME, int32 AGE>` .\n"
    ]
   },
   {
@@ -297,7 +329,7 @@
    "outputs": [],
    "source": [
     "# select all rows from table\n",
-    "selectResults= db.run_statement(name=\"SELECT\", schema='tuple<int32 ID, rstring NAME, int32 AGE>', stream=genData, sql=sql_select, credentials = db2credentials)\n",
+    "selectResults= db.run_statement(name=\"SELECT\", schema='tuple<int64 ID, rstring NAME, int32 AGE>', stream=genData, sql=sql_select, credentials = db2credentials)\n",
     "selectResults.print()\n",
     "\n",
     "# create a view to check retrieving data from a table\n",
@@ -308,7 +340,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <a name=\"launch\"> </a> 3. Submit the application\n",
+    "# <a name=\"submit\"> </a> 3. Submit the application\n",
     "\n",
     "A running Streams application is called a *job*. This next cell submits the application for execution and prints the resulting job id."
    ]
@@ -362,7 +394,7 @@
    "source": [
     "# <a name=\"status\"> </a> 5. See job status\n",
     "\n",
-    "You can view job status and logs by going to My Instances > Jobs. Find your job based on the id printed above. Retrieve job logs using the \"Download jobs\" action from the job's context menu.\n",
+    "You can view job status and logs by going to My Instances > Jobs. Find your job based on the id printed above. Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
     "\n",
     "To view other information about the job such as detailed metrics, access the Streams Console. Go to My Instances > Provisioned Instances. Select the Streams instance and open the URL listed under externalConsoleEndpoint or serviceConsoleEndpoint.\n",
     "\n"
@@ -383,7 +415,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cancel the job in the IBM Streams service\n",
+    "# cancel the job in the IBM Streams service\n",
     "submission_result.cancel_job_button()"
    ]
   },
@@ -392,8 +424,7 @@
    "metadata": {},
    "source": [
     "You can also interact with the job through the Job object returned from \n",
-    "\n",
-    "    submission_result.job\n",
+    "`submission_result.job`.\n",
     "\n",
     "For example, use  `job.cancel()` to cancel the running job directly.\n",
     "\n",
@@ -432,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
