--- a/Streams-EventStoreSample.ipynb
+++ b/Streams-EventStoreSample.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "- [Streams Python development guide](https://ibmstreams.github.io/streamsx.documentation/docs/latest/python/)\n",
     "- [Streams Python API](https://streamsxtopology.readthedocs.io/)\n",
-    "\n",
+    "- [Db2 Event Store install and set up](https://www.ibm.com/support/knowledgecenter/en/SSGNPV_2.0.0/local/installsetup.html)\n",
     "\n",
     "\n",
     "<a name=\"setup\"></a>\n",
@@ -57,9 +57,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 Install or upgrade `streamsx.eventstore` package\n",
+    "### 1.2 Optional: Upgrade the `streamsx.eventstore` Python package\n",
     "\n",
-    "Run the cell below to upgrade to the latest version of the `streamsx.eventstore` package or to install the package."
+    "Uncomment and run the cell below if you want to upgrade to the latest version of the streamsx.eventstore package."
    ]
   },
   {
@@ -70,11 +70,8 @@
    },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "!{sys.executable} -m pip install --user --upgrade streamsx.eventstore\n",
-    "\n",
-    "# When you need to install a specific version of the package, run this line instead:\n",
-    "#!pip install --user streamsx.eventstore==somever"
+    "#import sys\n",
+    "#!{sys.executable} -m pip install --user --upgrade streamsx.eventstore"
    ]
   },
   {
@@ -93,7 +90,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id=\"create\"></a>\n",
     "### 1.3 (OPTIONAL) Update streamsx.eventstore toolkit with latest release\n",
     "Get the **latest** streamsx.eventstore toolkit release from GitHub.\n",
     "\n",
@@ -418,7 +414,7 @@
     "## 4.1 See job status \n",
     "\n",
     "You can view job status and logs by going to **My Instances** > **Jobs**. Find your job based on the id printed above.\n",
-    "Retrieve job logs using the \"Download jobs\" action from the job's context menu.\n",
+    "Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
     "\n",
     "To view other information about the job such as detailed metrics, access the Streams Console.  Go to **My Instances** > **Provisioned Instances**. Select the Streams instance and open the URL listed under *externalConsoleEndpoint* or *serviceConsoleEndpoint*."
    ]
@@ -445,7 +441,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cancel the job in the IBM Streams service\n",
+    "# cancel the job in the IBM Streams service\n",
     "submission_result.cancel_job_button()"
    ]
   },
@@ -486,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
