--- a/Streams-PMMLScoringSample.ipynb
+++ b/Streams-PMMLScoringSample.ipynb
@@ -122,10 +122,10 @@
    "source": [
     "<a id=\"setupPackages\"></a>\n",
     "\n",
-    "## 1.2 Install or upgrade streamsx Python packages\n",
+    "## 1.2 Optional: Upgrade streamsx Python packages\n",
     "\n",
-    "As described in the [overview](#overview), we need the Python packages providing the Streams functionality to create streaming applications using Python, __streamsx__ and __streamsx.pmml__.<br>\n",
-    "The __streamsx__ should be at least 1.12.10 . Add the PMML scoring functionality by installing at least streamsx.pmml version 1.0.0 via `pip`.\n",
+    "As described in the [overview](#overview), we need the Python packages providing the Streams functionality to create streaming applications using Python, __streamsx__ and __streamsx.pmml__. These packages are already installed on the system. <br>\n",
+    "Uncomment and run the cell below if you want to upgrade to the latest version of the streamsx.pmml package.\n",
     " "
    ]
   },
@@ -135,12 +135,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "!{sys.executable} -m pip install --user --upgrade streamsx.pmml\n",
-    "\n",
-    "# When you need to install a specific version of the package, run this line instead:\n",
-    "#!{sys.executable} -m pip install --user streamsx.pmml==somever\n",
-    "\n",
+    "#import sys\n",
+    "#!{sys.executable} -m pip install --user --upgrade streamsx.pmml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# show the installed versions of both packages\n",
     "import streamsx.topology.context\n",
     "import streamsx.pmml as pmml\n",
@@ -248,7 +254,7 @@
    "outputs": [],
    "source": [
     "import csv\n",
-    "import streamsx.ec\n",
+    "from streamsx.ec import get_application_directory\n",
     "\n",
     "# a class which can be used in topology as a source\n",
     "class CSVFileReader:\n",
@@ -256,7 +262,7 @@
     "        self.file_name = file_name\n",
     "    def __call__(self):\n",
     "        # Convert each row in the file to a dict\n",
-    "        drug_file =  os.path.join(streamsx.ec.get_application_directory(), \"etc\", self.file_name)\n",
+    "        drug_file =  os.path.join(get_application_directory(), \"etc\", self.file_name)\n",
     "        col_names = [\"age\", \"sex\", \"bloodPressure\", \"cholesterol\", \n",
     "                     \"bloodSodiumConcentration\", \"bloodPotassionConcentration\", \"referenceDrug\"]\n",
     "       \n",
@@ -550,7 +556,7 @@
     "<b> See job status </b>  \n",
     "\n",
     "You can view job status and logs by going to **My Instances** > **Jobs**. Find your job based on the id printed above.\n",
-    "Retrieve job logs using the \"Download jobs\" action from the job's context menu.\n",
+    "Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
     "\n",
     "To view other information about the job such as detailed metrics, access the Streams Console.  Go to **My Instances** > **Provisioned Instances**. Select the Streams instance and open the URL listed under *externalConsoleEndpoint* or *serviceConsoleEndpoint*."
    ]
