--- a/Streams-RollingAverageSample.ipynb
+++ b/Streams-RollingAverageSample.ipynb
@@ -52,9 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "from icpd_core import icpd_util\n",
-    "cfg=icpd_util.get_service_instance_details(name='sample')\n"
+    "\n"
    ]
   },
   {
@@ -390,7 +388,7 @@
     "## 4.2 See job status \n",
     "\n",
     "You can view job status and logs by going to **My Instances** > **Jobs**. Find your job based on the id printed above.\n",
-    "Retrieve job logs using the \"Download jobs\" action from the job's context menu.\n",
+    "Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
     "\n",
     "To view other information about the job such as detailed metrics, access the Streams Console.  Go to **My Instances** > **Provisioned Instances**. Select the Streams instance and open the URL listed under *externalConsoleEndpoint* or *serviceConsoleEndpoint*."
    ]
