--- a/Streams-PMMLScoringSample.ipynb
+++ b/Streams-PMMLScoringSample.ipynb
@@ -12,31 +12,30 @@
     "\n",
     "\n",
     "<ol>\n",
-    "<li><a href=\"#setup\">Setup</a>\n",
-    "<ul>\n",
-    "<li>1.1. <a href=\"#setupStreams\">Connection to Streams Instance</a></li>\n",
-    "\n",
-    "<li>1.2. <a href=\"#setupPackages\">Install additional packages</a></li>\n",
-    "\n",
-    "<li>1.3. <a href=\"#setupDataModel\">Add data and model</a></li>\n",
-    "</ul></li>\n",
-    "<li><a href=\"#create\">Create the application</a>\n",
-    "<ul>\n",
-    "<li>2.1. <a href=\"#defineInput\">Define Data Input</a></li>\n",
-    "\n",
-    "<li>2.2. <a href=\"#analyzeData\">Analyze Data (ML scoring)</a>\n",
-    "<ul>\n",
-    "    <li>2.2.1. <a href=\"#prepareData\">Prepare Data for scoring</a></li>\n",
-    "    <li>2.2.2. <a href=\"#scoreData\">Score Data</a></li>\n",
-    "</ul></li>\n",
-    "<li>2.3 <a href=\"#defineOutput\">Define Data Output</a></li>\n",
-    "</ul>\n",
-    "<li><a href=\"#submit\">Submit the application</a></li>\n",
-    "\n",
-    "<li><a href=\"#view\">Connect to the running application to view data</a></li>\n",
-    "\n",
-    "<li><a href=\"#cancel\">Stop the application</a></li>\n",
+    "    <li><a href=\"#setup\">Setup</a>\n",
+    "        <ul style=\"list-style-type:none;\">\n",
+    "            <li>1.1. <a href=\"#setupStreams\">Connection to Streams Instance</a></li>\n",
+    "            <li>1.2. <a href=\"#setupPackages\">Install additional packages</a></li>\n",
+    "            <li>1.3. <a href=\"#setupDataModel\">Add data and model</a></li>\n",
+    "        </ul>\n",
+    "    </li>\n",
+    "    <li><a href=\"#create\">Create the application</a>\n",
+    "        <ul style=\"list-style-type:none;\">\n",
+    "            <li>2.1. <a href=\"#defineInput\">Define Data Input</a></li>\n",
+    "            <li>2.2. <a href=\"#analyzeData\">Analyze Data (ML scoring)</a>\n",
+    "                <ul style=\"list-style-type:none;\">\n",
+    "                    <li>2.2.1. <a href=\"#prepareData\">Prepare Data for scoring</a></li>\n",
+    "                    <li>2.2.2. <a href=\"#scoreData\">Score Data</a></li>\n",
+    "                </ul>\n",
+    "            </li>\n",
+    "            <li>2.3 <a href=\"#defineOutput\">Define Data Output</a></li>\n",
+    "        </ul>\n",
+    "    </li>\n",
+    "    <li><a href=\"#submit\">Submit the application</a></li>\n",
+    "    <li><a href=\"#view\">Connect to the running application to view data</a></li>\n",
+    "    <li><a href=\"#cancel\">Stop the application</a></li>\n",
     "</ol>\n",
+    "\n",
     "<a name=\"overview\"></a>\n",
     "\n",
     "# Overview\n",
@@ -88,13 +87,14 @@
     "  \n",
     "<div class=\"alert alert-block alert-info\">\n",
     "<b>What do we need to set up for our sample application?</b>  \n",
-    "    \n",
-    "+ A connection to running <b>IBM Streams instance</b> <br> \n",
-    "   This notebook describes using a Streams instance in IBM Cloud Pak for Data. \n",
-    "+ <b>streamsx.topology</b> - the Python package providing the IBM Streams standard/basic function set\n",
-    "+ <b>streamsx.pmml</b> - the Python package providing the IBM Streams PMML scoring functionality\n",
-    "+ <b>Data set</b> with patient health data we will let \"stream\" through the application\n",
-    "+ <b>Trained PMML model</b> that will predict the best drug treatment for the patients \n",
+    "<ul>    \n",
+    "<li>A connection to a running <b>IBM Streams instance</b> <br> \n",
+    "   This notebook describes using a Streams instance in IBM Cloud Pak for Data.</li>\n",
+    "<li><b>streamsx.topology</b> - the Python package providing the IBM Streams standard/basic function set</li>\n",
+    "<li><b>streamsx.pmml</b> - the Python package providing the IBM Streams PMML scoring functionality</li>\n",
+    "<li><b>Data set</b> with patient health data we will let \"stream\" through the application</li>\n",
+    "<li><b>Trained PMML model</b> that will predict the best drug treatment for the patients </li>\n",
+    "</ul>\n",
     "</div>\n",
     "\n",
     "\n",
@@ -300,16 +300,17 @@
     "Now that we have created a stream of patient records, we need to define the analytics we want to perform on our data. We want to use the PMML model to predict the best drug treatment based on the input stream data (patients' medical data).  \n",
     "\n",
     "<div class=\"alert alert-block alert-info\">\n",
-    "These are the core steps you need to use PMML model scoring in your application:\n",
-    "    \n",
-    "+ <b>Data preparation</b> <br> Make sure your input stream meets your model's expected input features\n",
-    "+ <b>Score using `streamsx.pmml.score()`, specifying: </b>\n",
-    "<br> - the model file to be used\n",
-    "<br> - the mapping from input stream fields to model input features\n",
-    "<br> - the mapping from output features to output stream fields\n",
-    "\n",
+    "<p>These are the core steps you need for using PMML model scoring in your application:</p>\n",
+    "<ul>\n",
+    "    <li><b>Data preparation</b><br>Make sure your input stream meets your model's expected input features\n",
+    "    </li>\n",
+    "    <li><b>Score using <code>streamsx.pmml.score()</code>, specifying: </b><br>\n",
+    "        - the model file to be used<br>\n",
+    "        - the mapping from input stream fields to model input features<br>\n",
+    "        - the mapping from output features to output stream fields\n",
+    "    </li>\n",
+    "</ul>\n",
     "</div>\n",
-    "<br>\n",
     "\n",
     "<a id=\"prepareData\"></a>\n",
     "### 2.2.1 Prepare data\n",
@@ -423,7 +424,7 @@
    "metadata": {},
    "source": [
     "<a id=\"defineOutput\"></a>\n",
-    "## 2.4 Define Output\n",
+    "## 2.3 Define Output\n",
     "\n",
     "The `score` stream is our final result.  We use `score.publish()` function to make this stream available to other applications. \n",
     "\n",
@@ -611,7 +612,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python3.6",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -625,7 +626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
