Adapt notebook to latest changes of other components
- The button to insert the instance connection has been removed, so we
needed to adapt appropriate notebook cells.
- Python method json_injection() has been renamed to inject() and moved
into streamsx.endpoint Python package.

--- a/Streams-SegmentIntegrationSample.ipynb
+++ b/Streams-SegmentIntegrationSample.ipynb
@@ -63,7 +63,7 @@
     "\n",
     "- [Streams Python development guide](https://ibmstreams.github.io/streamsx.documentation/docs/latest/python/)\n",
     "- [streamsx.topology Python API](https://streamsxtopology.readthedocs.io/)\n",
-    "- [streamsx.inet Python API](https://https://streamsxinet.readthedocs.io/)\n",
+    "- [streamsx.endpoint Python API](https://streamsxendpoint.readthedocs.io/)\n",
     "- [Segment Spec](https://segment.com/docs/spec/)\n",
     "- [Sepment Python Source API](https://segment.com/docs/sources/server/python/)\n",
     "- [Segment Webhooks Destination](https://segment.com/docs/destinations/webhooks/)\n",
@@ -88,7 +88,7 @@
     "+ A connection to a running <b>IBM Streams instance</b> <br> \n",
     "   This notebook describes using a Streams instance in IBM Cloud Pak for Data. \n",
     "+ <b>streamsx.topology</b> - the Python package providing the IBM Streams standard/basic function set.\n",
-    "+ <b>streamsx.inetserver</b> - the Python package providing the IBM Streams inetserver functionality.\n",
+    "+ <b>streamsx.endpoint</b> - the Python package providing the IBM Streams endpoint functionality.\n",
     "+ <b>Segment account</b> - easily [sign up](https://app.segment.com/signup/) at Segment. The free 'Developer' plan will suffice for this sample.\n",
     "</div>\n",
     "\n",
@@ -123,7 +123,7 @@
     "\n",
     "## 1.2 Install or upgrade streamsx Python packages\n",
     "\n",
-    "As described in [Overview](#overview), we need the Python packages providing the Streams functionality to create streaming applications using Python, __streamsx__ and __streamsx.inetserver__.<br>\n",
+    "As described in [Overview](#overview), we need the Python packages providing the Streams functionality to create streaming applications using Python, __streamsx__ and __streamsx.endpoint__.<br>\n",
     "Run the cell below to upgrade and check which version of the packages is installed.   "
    ]
   },
@@ -135,17 +135,17 @@
    "source": [
     "import sys\n",
     "!{sys.executable} -m pip install --user --upgrade streamsx\n",
-    "!{sys.executable} -m pip install --user --upgrade streamsx.inet\n",
+    "!{sys.executable} -m pip install --user --upgrade streamsx.endpoint\n",
     "\n",
     "# When you need to install a specific version of the package, run this line instead:\n",
     "#!{sys.executable} -m pip install --user streamsx==somever\n",
-    "#!{sys.executable} -m pip install --user streamsx.inet==somever\n",
+    "#!{sys.executable} -m pip install --user streamsx.endpoint==somever\n",
     "\n",
     "# show the installed versions of both packages\n",
     "import streamsx.topology.context\n",
-    "import streamsx.inet as inet\n",
+    "import streamsx.endpoint as endpoint\n",
     "print(\"INFO: streamsx package version: \" + streamsx.topology.context.__version__)\n",
-    "print(\"INFO: streamsx.inetserver package version: \" + inet.__version__)\n",
+    "print(\"INFO: streamsx.endpoint package version: \" + endpoint.__version__)\n",
     "\n",
     "#For more details uncomment lines below.\n",
     "#!pip show streamsx\n",
@@ -581,7 +581,7 @@
     "\n",
     "## 3.2 Webhook data publisher\n",
     "\n",
-    "This small application creates a topology using streamsx.inet.json_injection() as a source. It, too, publishes the source's data for other applications to consume. Using the defaults, 'json_injection' is reached via the URL: http://localhost:8080/HTTPJSONInjection/ports/output/0/inject .\n"
+    "This small application creates a topology using streamsx.endpoint.inject() as a source. It, too, publishes the source's data for other applications to consume. Using the defaults, 'inject())' is reached via the URL: http://localhost:8080/HTTPJSONInjection/ports/output/0/inject .\n"
    ]
   },
   {
@@ -593,7 +593,7 @@
     "from streamsx.topology.topology import *\n",
     "from streamsx.topology.schema import *\n",
     "import streamsx.topology.context\n",
-    "import streamsx.inet as inet\n",
+    "import streamsx.endpoint as endpoint\n",
     "\n",
     "\n",
     "# Create topology\n",
@@ -604,7 +604,7 @@
     "\n",
     "\n",
     "# Use WebhookDataSource as a Streams source\n",
-    "webhookDataStream = inet.json_injection(webhookDataTopo)\n",
+    "webhookDataStream = endpoint.inject(webhookDataTopo)\n",
     "\n",
     "# Attach a view to watch the data stream when running\n",
     "webhookDataStream_view = webhookDataStream.view(name=\"Webhook data\", description=\"Webhook data stream\")\n",
