--- a/Streams-PMMLScoringSample.ipynb
+++ b/Streams-PMMLScoringSample.ipynb
@@ -248,7 +248,7 @@
    "outputs": [],
    "source": [
     "import csv\n",
-    "import streamsx.ec\n",
+    "from streamsx.ec import get_application_directory\n",
     "\n",
     "# a class which can be used in topology as a source\n",
     "class CSVFileReader:\n",
@@ -256,7 +256,7 @@
     "        self.file_name = file_name\n",
     "    def __call__(self):\n",
     "        # Convert each row in the file to a dict\n",
-    "        drug_file =  os.path.join(streamsx.ec.get_application_directory(), \"etc\", self.file_name)\n",
+    "        drug_file =  os.path.join(get_application_directory(), \"etc\", self.file_name)\n",
     "        col_names = [\"age\", \"sex\", \"bloodPressure\", \"cholesterol\", \n",
     "                     \"bloodSodiumConcentration\", \"bloodPotassionConcentration\", \"referenceDrug\"]\n",
     "       \n",
@@ -550,7 +550,7 @@
     "<b> See job status </b>  \n",
     "\n",
     "You can view job status and logs by going to **My Instances** > **Jobs**. Find your job based on the id printed above.\n",
-    "Retrieve job logs using the \"Download jobs\" action from the job's context menu.\n",
+    "Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
     "\n",
     "To view other information about the job such as detailed metrics, access the Streams Console.  Go to **My Instances** > **Provisioned Instances**. Select the Streams instance and open the URL listed under *externalConsoleEndpoint* or *serviceConsoleEndpoint*."
    ]
