--- a/Streams-PMMLScoringSample.ipynb
+++ b/Streams-PMMLScoringSample.ipynb
@@ -101,12 +101,13 @@
     "\n",
     "<a id=\"setupStreams\"></a>\n",
     "\n",
-    "### 1.1 Add credentials and connection information for the IBM Streams instance\n",
+    "### 1.1 Add credentials for the IBM Streams service\n",
     "\n",
-    "This notebook is running in IBM Cloud Pak for Data and we are using an IBM Streams instance running in IBM Cloud Pak for Data. Getting all information needed to connect to the Streams instance here is simple.<br>\n",
-    "With the cell below selected, click the \"Connect to instance\" button in the toolbar to insert the credentials and connection information for the service.\n",
+    "In order to submit a Streams application you need to provide the name of the Streams instance.\n",
     "\n",
-    "<a target=\"blank\" href=\"https://developer.ibm.com/streamsdev/wp-content/uploads/sites/15/2019/02/connect_icp4d.gif\">See an example</a>.\n"
+    "1. From the navigation menu, click **My instances**.\n",
+    "2. Click the **Provisioned Instances** tab.\n",
+    "3. Update the value of `streams_instance_name` in the cell below according to your Streams instance name."
    ]
   },
   {
@@ -114,7 +115,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from icpd_core import icpd_util\n",
+    "streams_instance_name = \"my-instance\" ## Change this to Streams instance\n",
+    "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -216,7 +221,7 @@
     "\n",
     "# add files to be contained in the archive which is deployed to the node running the application\n",
     "# in this sample we need the `dataset` with sample data to be present at the worker node\n",
-    "topo.add_file_dependency(os.environ['DSX_PROJECT_DIR']+'/datasets/Drug_dataset.csv', 'etc')"
+    "topo.add_file_dependency('/project_data/data_asset/Drug_dataset.csv', 'etc')"
    ]
   },
   {
@@ -236,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_data = os.environ['DSX_PROJECT_DIR']+'/datasets/Drug_dataset.csv'\n",
+    "sample_data = '/project_data/data_asset/Drug_dataset.csv'\n",
     "!head $sample_data"
    ]
   },
