--- a/Streams-SPLToolkitsTutorial.ipynb
+++ b/Streams-SPLToolkitsTutorial.ipynb
@@ -17,7 +17,6 @@
     "4. [Launch SPL main composite](#ghtksample)\n",
     "5. [Work with a microservice of a toolkit](#ghtk)\n",
     "6. [Integration of SPL operators in a Python topology](#splpy)\n",
-    "7. [Launch SPL mixed mode application](#mixedmode)\n",
     "\n",
     "# Overview\n",
     "\n",
@@ -47,9 +46,11 @@
     "\n",
     "### 1.1 Add credentials for the IBM Streams service\n",
     "\n",
-    "With the cell below selected, click the \"Connect to instance\" button in the toolbar to insert the credentials for the service.\n",
+    "In order to submit a Streams application you need to provide the name of the Streams instance.\n",
     "\n",
-    "<a target=\"blank\" href=\"https://developer.ibm.com/streamsdev/wp-content/uploads/sites/15/2019/02/connect_icp4d.gif\">See an example</a>."
+    "1. From the navigation menu, click **My instances**.\n",
+    "2. Click the **Provisioned Instances** tab.\n",
+    "3. Update the value of `streams_instance_name` in the cell below according to your Streams instance name."
    ]
   },
   {
@@ -57,7 +58,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from icpd_core import icpd_util\n",
+    "streams_instance_name = \"my-instance\" ## Change this to Streams instance\n",
+    "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -774,272 +779,11 @@
     "\n",
     "We used SPL operators with the Python Topology API."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## <a name=\"mixedmode\"> </a> 7. SPL Mixed Mode application\n",
-    "\n",
-    "### 7.1 Create sample toolkit\n",
-    "\n",
-    "In your project directory a new sample SPLMM toolkit is created under `/datasets/mixedmode`.\n",
-    "The required subdirectories `opt` and `sample` are created.\n",
-    "\n",
-    "* `opt`: Contains a configuration file to configure the Perl code in the SPLMM at build time\n",
-    "* `sample`: Namespace of the sample SPLMM file. In this directory the Main composite is part of the `BinaryTree.splmm` file."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import itertools\n",
-    "\n",
-    "# project dir for your mixed mode sample application\n",
-    "sample_splmm_toolkit = os.environ['DSX_PROJECT_DIR'] + '/datasets/mixedmode'\n",
-    "# config file that is read by perl mixed-mode code in splmm\n",
-    "cfgfile = sample_splmm_toolkit + '/opt/mm.cfg'\n",
-    "# main composite to be build\n",
-    "main_composite_name = 'sample::BinaryTree'\n",
-    "# splmm file to be created\n",
-    "splmm_file = os.path.join(sample_splmm_toolkit, 'sample/BinaryTree.splmm')\n",
-    "\n",
-    "sub_dir = [\"opt\", \"sample\"]\n",
-    "for dir1 in sub_dir:\n",
-    "    try: os.makedirs(os.path.join(sample_splmm_toolkit, dir1))\n",
-    "    except OSError: pass"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 7.2 Create SPLMM file\n",
-    "\n",
-    "The SPLMM file is generated from the cell content below and contains Perl code that reads a config file as input.\n",
-    "The config file `opt/mm.cfg` contains the key-value pair for \"numLevels\", specifying the number of levels for the binary tree to be generated."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "splmm = \"\"\"\n",
-    "namespace sample;\n",
-    "\n",
-    "<% # switch to Perl scripting mode\n",
-    "  # parse arguments\n",
-    "  use integer;\n",
-    "  my $numLevels = $ARGV[0];\n",
-    "  unless(defined($numLevels) and $numLevels>0) {\n",
-    "    $numLevels = 3;\n",
-    "  }\n",
-    "  use File::Basename;\n",
-    "  my $projDir = dirname(__FILE__);\n",
-    "  print \\\"//projDir $projDir\\\\n\\\";\n",
-    "  my (%Cfg);\n",
-    "  open(CONFIG, \\\"<$projDir/../opt/mm.cfg\\\") || die \\\"Can't open cfg : $!\\\";\n",
-    "  while (<CONFIG>) {\n",
-    "    chomp; $_ =~ tr/A-Z/a-z/; s/#.*//; s/^\\s+//; s/\\s+$//; # clean the lines\n",
-    "    next unless length;\n",
-    "    my ($Key, $Val) = split(/\\s*=\\s*/, $_, 2);\n",
-    "    $Cfg{$Key} = \\\"$Val\\\\n\\\";\n",
-    "    chomp $Cfg{$Key};\n",
-    "  }\n",
-    "  foreach my $Key (sort keys %Cfg) {\n",
-    "    if ($Key == 'numLevels') {\n",
-    "       print \\\"//$Key = $Cfg{$Key}\\\\n\\\";\n",
-    "       $numLevels = $Cfg{$Key};\n",
-    "    }\n",
-    "  }\n",
-    "%>\n",
-    "\n",
-    "public composite BinaryTree\n",
-    "{\n",
-    "  graph  \n",
-    "    stream<rstring data> Src = Beacon() \n",
-    "    { \n",
-    "      //param iterations : 10u;\n",
-    "      output Src : data = (rstring)((int32) IterationCount() + 1);\n",
-    "    }\n",
-    "\n",
-    "    // the root node\n",
-    "    stream<rstring data> Node_0_0 = Filter(Src) {}\n",
-    "\n",
-    "    <% # create levels of the tree\n",
-    "      my @leaves; # collect leaf streams\n",
-    "      my $n = 1; # num. of nodes at a level\n",
-    "      for(my $i=1; $i<$numLevels; ++$i) {\n",
-    "        $n *= 2; # num. of nodes at this level\n",
-    "        for(my $j=0; $j<$n; ++$j) {\n",
-    "          my $p = ($i-1).\\\"_\\\".($j/2); # parent\n",
-    "          my $s = \\\"${i}_${j}\\\"; # self %>\n",
-    "\n",
-    "          stream<rstring data> Node_<%=$s%>\n",
-    "               = Filter(Node_<%=$p%>){}\n",
-    "\n",
-    "          <% # collect last level's streams\n",
-    "          push @leaves, \\\"Node_${s}\\\"\n",
-    "              if($i==$numLevels-1);\n",
-    "        }\n",
-    "      }\n",
-    "      my $sinkStreams = join(\\\",\\\",@leaves);\n",
-    "    %>\n",
-    "   \n",
-    "    () as Writer = Custom(<%=$sinkStreams%> as I) {\n",
-    "       logic \n",
-    "         onTuple I: {\n",
-    "            println((rstring) I);\n",
-    "         }\n",
-    "    }\n",
-    "\n",
-    "}\n",
-    "\"\"\"\n",
-    "\n",
-    "splmmfile = open(splmm_file, 'w') \n",
-    "splmmfile.write(splmm) \n",
-    "splmmfile.close() "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 7.3 Configure the application"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# set the number of levels for the binary tree to be generated\n",
-    "numlevels = 3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 7.3.1 Create the config file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(cfgfile, \"w\") as cfg_file:\n",
-    "    cfg_file.write('numLevels = ' + str(numlevels))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 7.4 Create application"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import streamsx.spl.op as op\n",
-    "\n",
-    "r = op.main_composite(kind=main_composite_name, toolkits=[sample_splmm_toolkit])\n",
-    "topo = r[0]\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 7.5 Submit the application\n",
-    "\n",
-    "A running Streams application is called a *job*. This next cell submits the application for execution and prints the resulting job id."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from streamsx.topology import context\n",
-    "\n",
-    "jc = context.JobConfig()\n",
-    "jc.raw_overlay = { \"deploymentConfig\": { \"fusionScheme\": \"manual\", \"fusionTargetPeCount\": 1 } }\n",
-    "jc.add(cfg)\n",
-    "\n",
-    "# Disable SSL certificate verification if necessary\n",
-    "cfg[context.ConfigParams.SSL_VERIFY] = False\n",
-    "\n",
-    "submission_result = context.submit(context.ContextTypes.DISTRIBUTED,\n",
-    "                                   topo, \n",
-    "                                   config=cfg)\n",
-    "# The submission_result object contains information about the running application, or job\n",
-    "if submission_result.job:\n",
-    "    print(\"JobId: \", submission_result['id'] , \"Name: \", submission_result['name'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 7.6 See job status\n",
-    "\n",
-    "You can view job status and logs by going to My Instances > Jobs. Find your job based on the id printed above. Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
-    "\n",
-    "To view other information about the job such as detailed metrics, access the Streams Console. Go to My Instances > Provisioned Instances. Select the Streams instance and open the URL listed under externalConsoleEndpoint or serviceConsoleEndpoint."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 7.7 Cancel the job\n",
-    "\n",
-    "This cell generates a widget you can use to cancel the job."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# cancel the job in the IBM Streams service\n",
-    "submission_result.cancel_job_button()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can also interact with the job through the Job object returned from \n",
-    "`submission_result.job`.\n",
-    "\n",
-    "For example, use  `job.cancel()` to cancel the running job directly.\n",
-    "\n",
-    "## Summary\n",
-    "\n",
-    "We configured and launched a SPL mixed-mode application with the Python API."
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.6",
    "language": "python",
    "name": "python3"
   },
