--- a/Streams-EventStreamsSample.ipynb
+++ b/Streams-EventStreamsSample.ipynb
@@ -41,9 +41,11 @@
     "# 1. Setup\n",
     "### 1.1 Add credentials for the IBM Streams service\n",
     "\n",
-    "With the cell below selected, click the \"Connect to instance\" button in the toolbar to insert the credentials for the service.\n",
+    "In order to submit a Streams application you need to provide the name of the Streams instance.\n",
     "\n",
-    "<a target=\"blank\" href=\"https://developer.ibm.com/streamsdev/wp-content/uploads/sites/15/2019/02/connect_icp4d.gif\">See an example</a>."
+    "1. From the navigation menu, click **My instances**.\n",
+    "2. Click the **Provisioned Instances** tab.\n",
+    "3. Update the value of `streams_instance_name` in the cell below according to your Streams instance name."
    ]
   },
   {
@@ -51,7 +53,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from icpd_core import icpd_util\n",
+    "streams_instance_name = \"my-instance\" ## Change this to Streams instance\n",
+    "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
+   ]
   },
   {
    "cell_type": "markdown",
