HDFS notebook updated to install python packages. #10

--- a/Streams-HdfsSample.ipynb
+++ b/Streams-HdfsSample.ipynb
@@ -51,7 +51,7 @@
    "outputs": [],
    "source": [
     "from icpd_core import icpd_util\n",
-    "streams_instance_name = \"my-instance\" ## Change this to Streams instance\n",
+    "streams_instance_name =\"my-instance\" ## Change this to Streams instance\n",
     "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
    ]
   },
@@ -61,7 +61,7 @@
    "source": [
     "### 1.2 Optional: Upgrade the `streamsx.hdfs` Python package\n",
     "\n",
-    "Uncomment and run the cell below, if you want to upgrade to the latest version of the `streamsx.hdfs` package."
+    "Uncomment and run the cell below, if you want to upgrade to the latest version of the `streamsx` and `streamsx.hdfs` package."
    ]
   },
   {
@@ -71,7 +71,31 @@
    "outputs": [],
    "source": [
     "#import sys\n",
-    "#!{sys.executable} -m pip install --user --upgrade streamsx.hdfs"
+    "#!pip install --user --upgrade streamsx\n",
+    "#!pip install --user --upgrade streamsx.hdfs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The python packages will be installed in the top of user path.<br/>\n",
+    "If you have problem to get the latest version of python packeges you can set the order of python packages manually to user path. <br/>\n",
+    "you can find the user path  with this command:<br/>\n",
+    "`\n",
+    "import sys\n",
+    "for e in sys.path:\n",
+    "    print(e)\n",
+    "`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sys.path.insert(0, '/home/wsuser/.local/lib/python3.6/site-packages')"
    ]
   },
   {
@@ -443,7 +467,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3.6",
+   "display_name": "Python 3.6",
    "language": "python",
    "name": "python3"
   },
@@ -457,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
