HBASE notebook updated to install python packages #10

--- a/Streams-HbaseSample.ipynb
+++ b/Streams-HbaseSample.ipynb
@@ -70,7 +70,31 @@
    "outputs": [],
    "source": [
     "#import sys\n",
-    "#!{sys.executable} -m pip install --user --upgrade streamsx.hbase"
+    "#!pip install --user --upgrade streamsx\n",
+    "#!pip install --user --upgrade streamsx.hbase"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The python packages will be installed in the top of user path.<br/>\n",
+    "If you have problem to get the latest version of python packeges you can set the order of python packages manually to user path.<br/>\n",
+    "you can find the user path with this command:<br/>\n",
+    "`\n",
+    "import sys\n",
+    "for e in sys.path:\n",
+    "    print(e)\n",
+    "`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sys.path.insert(0, '/home/wsuser/.local/lib/python3.6/site-packages')"
    ]
   },
   {
@@ -376,7 +400,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3.6",
+   "display_name": "Python 3.6",
    "language": "python",
    "name": "python3"
   },
@@ -390,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
